Header inside Main Header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     <link rel="stylesheet" href="css/main-style.css">
 </head>
 <body>
-    
+
+    <!-- HEADER  -->
+    <div class="main__header">
+        <header class="header">
+            <nav class="sitenav">
+                <a href="#" class="sitenav__logo">
+                    <img src="images/clerksy-logo.svg" alt="" class="sitenav__logo--img">
+                </a>
+                <ul class="sitenav__nav">
+                    <li class="sitenav__item">
+                        <a href="" class="sitenav__link">Log In</a>
+                    </li>
+                    <li class="sitenav__item">
+                        <a href="" class="sitenav__link">844-332-6440</a>
+                    </li>
+                    <li class="sitenav__item">
+                        <a href="" class="sitenav__link sitenav__link--active">Get Started</a>
+                    </li>
+                    
+                </ul>
+            </nav>
+        </header>
+    </div>
 </body>
 </html>
