Bottom Header inside Main Header

--- a/index.html
+++ b/index.html
@@ -16,23 +16,33 @@
     <div class="main__header">
         <header class="header">
             <nav class="sitenav">
-                <a href="#" class="sitenav__logo">
-                    <img src="images/clerksy-logo.svg" alt="" class="sitenav__logo--img">
+                <a  class="sitenav__logo" href="#">
+                    <img  class="sitenav__logo--img" src="images/clerksy-logo.svg" alt="">
                 </a>
                 <ul class="sitenav__nav">
                     <li class="sitenav__item">
-                        <a href="" class="sitenav__link">Log In</a>
+                        <a class="sitenav__link" href="">Log In</a>
                     </li>
                     <li class="sitenav__item">
-                        <a href="" class="sitenav__link">844-332-6440</a>
+                        <a class="sitenav__link" href="">844-332-6440</a>
                     </li>
                     <li class="sitenav__item">
-                        <a href="" class="sitenav__link sitenav__link--active">Get Started</a>
+                        <a class="sitenav__link sitenav__link--active" href="">Get Started</a>
                     </li>
                     
                 </ul>
             </nav>
         </header>
+
+        <div class="bottom__header">
+            <div class="header__description">
+                <h1 class="header__heading caption">Running the show has never been so easy.</h1>
+                <p class="header__paragraph paragraph">Ready to put the human back in HR? Clerksy helps you set the stage with an inclusive and compliant workplace.</p>
+            </div>
+            <div class="header__image">
+                <img  class="human__image" src="images/header-right.png" alt="Humans" width="700" height="580">
+            </div>
+        </div>
     </div>
 </body>
 </html>
