--- a/index.html
+++ b/index.html
@@ -44,5 +44,33 @@
             </div>
         </div>
     </div>
+
+    <!-- HR INFO -->
+
+    <section class="hr__info">
+        <div class="hr__invitation">
+            <img class="hr__image" src="images/woman-with-smile.png" alt="Put the human back in HR" width="420" height="450">
+            <div class="hr__text">
+                <h2 class="hr__heading caption">Put the human back in HR.</h2>
+                <p class="hr__paragraph paragraph">Your employees are the real stars. Show the love and help them perform!</p>
+            </div>
+        </div>
+        <div class="hr__invitation">
+            <div class="hr__text">
+                <h2 class="hr__heading caption">You don’t have to play all the parts.</h2>
+                <p class="hr__paragraph paragraph">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</p>
+            </div>
+            <img class="hr__image" src="images/play-all-the-parts.png" alt="You don’t have to play all the parts" width="420" height="450">
+        </div>
+
+        <div class="hr__company">
+            <h2 class="caption">We partner with the best</h2>
+            <img class="hr__company--image" src="images/stripe.svg" alt="Stripe" width="110" height="45">
+            <img class="hr__company--image" src="images/google.svg" alt="Google" width="110" height="45">
+            <img class="hr__company--image" src="images/notion.svg" alt="Notion" width="110" height="45">
+            <img class="hr__company--image" src="images/gusto.svg" alt="Gusto" width="110" height="45">
+            <img class="hr__company--image" src="images/aircall.svg" alt="Aircall" width="110" height="45">
+        </div>
+    </section>
 </body>
 </html>
