HR Production of the Highest Quality

--- a/index.html
+++ b/index.html
@@ -71,6 +71,32 @@
             <img class="hr__company--image" src="images/gusto.svg" alt="Gusto" width="110" height="45">
             <img class="hr__company--image" src="images/aircall.svg" alt="Aircall" width="110" height="45">
         </div>
+
+        <div class="hr__quality">
+            <h2 class="caption">HR Production of the Highest Quality</h2>
+            <ul class="hr__highest--quality">
+                <li class="hr__quality--item">
+                    <img src="images/messages.svg" alt="MEssage" width="117" height="145">
+                    <p class="paragraph">Educates & Informs</p>
+                    <p class="paragraph">Employee Expectations</p>
+                </li>
+                <li class="hr__quality--item">
+                    <img src="images/shield.svg" alt="Shield" width="80" height="160">
+                    <p class="paragraph">Protects Your Business</p>
+                    <p class="paragraph">Just in Case</p>
+                </li>
+                <li class="hr__quality--item">
+                    <img src="images/cupboard.svg" alt="Cupboard" width="66" height="145">
+                    <p class="paragraph">Manages & Stores</p>
+                    <p class="paragraph">Important Documents</p>
+                </li>
+                <li class="hr__quality--item">
+                    <img src="images/work-environment.svg" alt="Work-Environment" width="95" height="150">
+                    <p class="paragraph">Create a Healthy</p>
+                    <p class="paragraph">Work Environment</p>
+                </li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
