HR Quality part done

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="hr__company">
-            <h2 class="caption">We partner with the best</h2>
+            <h2 class="caption hr__caption">We partner with the best</h2>
             <img class="hr__company--image" src="images/stripe.svg" alt="Stripe" width="110" height="45">
             <img class="hr__company--image" src="images/google.svg" alt="Google" width="110" height="45">
             <img class="hr__company--image" src="images/notion.svg" alt="Notion" width="110" height="45">
@@ -73,7 +73,7 @@
         </div>
 
         <div class="hr__quality">
-            <h2 class="caption">HR Production of the Highest Quality</h2>
+            <h2 class="caption hr__caption">HR Production of the Highest Quality</h2>
             <ul class="hr__highest--quality">
                 <li class="hr__quality--item">
                     <img src="images/messages.svg" alt="MEssage" width="117" height="145">
