Employees come in all shapes and sizes

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
                 </li>
             </ul>
         </div>
+
+        <div class="employee">
+            <h2 class="caption employee__text">Employees come in all shapes and sizes. Find the right to Fit.</h2>
+            <p class="paragraph employee__text">Focus on casting and screening. Let Clerksy handle contracts, resolve any on set-conflicts and make sure you are compliant with work and safety boards.</p>
+            <img src="images/employees-come-in-all-shapes.png" alt="Employees">
+        </div>
     </section>
 </body>
 </html>
