--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
             <p class="paragraph employee__text">Focus on casting and screening. Let Clerksy handle contracts, resolve any on set-conflicts and make sure you are compliant with work and safety boards.</p>
             <img src="images/employees-come-in-all-shapes.png" alt="Employees">
         </div>
+
+        <div class="employee__development">
+            <div class="employee__development--text">
+                <h2 class="caption">How the scenes Fit together</h2>
+                <p class="paragraph">Employee Training & Development, Diversity & Inclusion Programs, and Conflict Resolution.</p>
+            </div>
+            <img src="images/employee-development.png" alt="Employee-Development" width="490" height="420">
+        </div>
+
+    </section>
+
+    <section class="advantages">
+        
     </section>
 </body>
 </html>
