--- a/index.html
+++ b/index.html
@@ -114,8 +114,41 @@
 
     </section>
 
+    <!-- Advantages  -->
     <section class="advantages">
-        
+        <div class="interest">
+            <h2 class="caption">Consider everyone's best interest</h2>
+            <p class="paragraph">HR is for everyone. Clerksy can help you.</p>
+            <div class="card__container">
+                <div class="interest__card">
+                    <h3 class="caption card--caption caption--shield">Protect Your Company</h3>
+                    <ul class="card--list">
+                        <li class="card--item">Compliance Audits & Training</li>
+                        <li class="card--item">Employee Data Storage</li>
+                        <li class="card--item">Policy Drafting</li>
+                    </ul>
+                </div>
+
+                <div class="interest__card">
+                    <h3 class="caption card--caption caption--star">Set Your Employees Up For Success</h3>
+                    <ul class="card--list">
+                        <li class="card--item">Learning & Development</li>
+                        <li class="card--item">Employee Relations</li>
+                        <li class="card--item">Benefit Management</li>
+                        <li class="card--item">Employee Performance</li>
+                    </ul>
+                </div>
+
+                <div class="interest__card">
+                    <h3 class="caption card--caption caption--search">Know Your Industry's Legal Landscape</h3>
+                    <ul class="card--list">
+                        <li class="card--item">Work Place Investigations</li>
+                        <li class="card--item">Employee Mediations</li>
+                        <li class="card--item">Policy Drafting</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
