WIP Advantages Section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,22 @@
                 </div>
             </div>
         </div>
+
+        <div class="help">
+            <h2 class="caption">It's easy as 1, 2, 3</h2>
+            <p class="help--paragraph paragraph">Clerksy can help use your unique business needs. Here's how:</p>
+            <img src="images/help.svg" alt="Help" width="1000" height="170">
+            <button class="book--button">Book Free Discovery Call</button>
+        </div>
+
+        <div class="employee__development">
+            <div class="employee__development--text">
+                <h2 class="caption">Not just another HR resource.</h2>
+                <p class="help--paragraph paragraph">Simple. Entertaining. Informative.</p>
+                <button class="book--button">Download E-book</button>
+            </div>
+            <img src="images/clerksy-e-book.png" alt="Employee-Development" width="490" height="420">
+        </div>
     </section>
 </body>
 </html>
