Advantages Footer part and place flowers

--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
             </div>
             <img src="images/clerksy-e-book.png" alt="Employee-Development" width="490" height="420">
         </div>
+
+        <footer class="advantages__footer">
+            <img class="footer--flower flower--left" src="images/footer-desktop-left.png" alt="Flower" width="250">
+            <h2 class="caption">Get Started With Clerksy</h2>
+            <p class="paragraph">Make sure your business puts people first.</p>
+            <button class="book--button call--btn">Book a Free Discovery Call</button>
+            <img class="footer--flower flower--right" src="images/footer-desktop-right.png" alt="Flower" width="250">
+        </footer>
     </section>
 </body>
 </html>
