WIP Site Footer

--- a/index.html
+++ b/index.html
@@ -174,5 +174,9 @@
             <img class="footer--flower flower--right" src="images/footer-desktop-right.png" alt="Flower" width="250">
         </footer>
     </section>
+
+    <footer class="site__footer">
+        
+    </footer>
 </body>
 </html>
