--- a/index.html
+++ b/index.html
@@ -176,7 +176,17 @@
     </section>
 
     <footer class="site__footer">
-        
+        <div class="send--email">
+            <div class="email--text">
+                <h2 class="caption">Stay up to date!</h2>
+                <p class="paragraph">Sign up for the latest Clerksy news.</p>
+            </div>
+            <form>
+                <input class="input--email" type="email" name="Email" required> 
+                <button class="input--btn" type="submit">Send</button><br>
+                <p class="paragraph label">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full</p>
+            </form>   
+        </div>
     </footer>
 </body>
 </html>
