Send Email add div and flex grow

--- a/index.html
+++ b/index.html
@@ -182,8 +182,10 @@
                 <p class="paragraph">Sign up for the latest Clerksy news.</p>
             </div>
             <form>
-                <input class="input--email" type="email" name="Email" required> 
-                <button class="input--btn" type="submit">Send</button><br>
+                <div class="input--container">
+                    <input class="input--email" type="email" name="Email" required> 
+                    <button class="input--btn" type="submit">Send</button>
+                </div>
                 <p class="paragraph label">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full</p>
             </form>   
         </div>
