--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <input class="input--email" type="email" name="Email" required> 
                     <button class="input--btn" type="submit">Send</button>
                 </div>
-                <p class="paragraph label">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full</p>
+                <p class="paragraph label">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full <a href="#">Privacy Policy</a></p>
             </form>   
         </div>
     </footer>
