--- a/index.html
+++ b/index.html
@@ -189,6 +189,28 @@
                 <p class="paragraph label">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full <a href="#">Privacy Policy</a></p>
             </form>   
         </div>
+        <div class="footer">
+            <div class="footer--header">
+                <img  src="images/clerksy-logo-green.svg" alt="Logo"> 
+                <h3>A people company.</h3>
+                <div class="social">
+                    <a href="#"><img src="images/facebook.svg" alt="Facebook"></a>
+                    <a href="#"><img src="images/twitter.svg" alt="twitter"></a>
+                    <a href="#"><img src="images/linked-in.svg" alt="linked-in"></a>
+                    <a href="#"><img src="images/instagram.svg" alt="instagram"></a>
+                </div>
+            </div>
+            <nav class="footer--navbar">
+                <p class="paragraph">&copy; 2020 Clerksy, Inc. Clerksy is a registered trademark of Clerksy, Inc.</p>
+                <ul class="footer-link">
+                    <li class="footer--item"><a href="#">Privacy Policy</a></li>
+                    <li class="footer--item"><a href="#">Terms of Service</a></li>
+                    <li class="footer--item"><a href="#">GDPR</a></li>
+                    <li class="footer--item"><a href="#">Careers</a></li>
+                    <li class="footer--item"><a href="#">Press Kit</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
