--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <p class="hr__paragraph paragraph">Your employees are the real stars. Show the love and help them perform!</p>
             </div>
         </div>
-        <div class="hr__invitation">
+        <div class="hr__invitation hr__invitation--second">
             <div class="hr__text">
                 <h2 class="hr__heading caption">You don’t have to play all the parts.</h2>
                 <p class="hr__paragraph paragraph">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</p>
