--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <div class="main__header">
         <header class="header">
             <nav class="sitenav">
-                <a  class="sitenav__logo" href="#">
-                    <img  class="sitenav__logo--img" src="images/clerksy-logo.svg" alt="">
-                </a>
-                <ul class="sitenav__nav">
+                <div  class="sitenav__logo" href="#">
+                    <img  class="sitenav__logo--img" src="images/clerksy-logo.svg" alt="Logo">
+                    <button class="hamburger open"></button>
+                </div>
+                <ul class="sitenav__nav sitenav__nav--off">
                     <li class="sitenav__item">
                         <a class="sitenav__link" href="">Log In</a>
                     </li>
@@ -212,5 +213,8 @@
             </nav>
         </div>
     </footer>
+
+
+    <script src="js/main.js"></script>
 </body>
 </html>
